@@ -1,4 +1,5 @@
 Version 3.3.3 (2010-xx-xx)
+	Added new script_loaded callback function setting for the jQuery plugin.
 	Removed some unnecessary inline style information from some of the dialogs.
 	Fixed some issues with the changing for the TinyMCE jQuery plugin.
 	Fixed bug where some texts in the new paste plugin wasn't placed in language pack.
